moved comments js code from ViewPost.cshtml to external file in wwwroot called comments.js

--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum.csproj
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum.csproj
@@ -27,6 +27,10 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
 
+    <Content Update="wwwroot\css\comments.css">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+
     <Content Update="wwwroot\css\postsAll.css">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
