added functionality where a user that is not logged in tries to vote gets redirected to login page

--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum.csproj
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum.csproj
@@ -53,6 +53,9 @@
     <Content Update="wwwroot\js\comments.js">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Update="wwwroot\js\votes.js">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
 
   </ItemGroup>
 
