refactored image upload logic and also moved it into a separate service which is in-turn injected in the UserService which now uses the AvatarUpdate() method as a "facade"
implemented image resizing to reduce page load times as previously resizing was done via css but the image the server returned could still be with it's original resolution - default image dimensions is now 50x50 px (width-x-height)

--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum.csproj
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum.csproj
@@ -23,6 +23,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
     <PackageReference Include="Profanity.Detector" Version="0.1.8" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="1.0.4" />
   </ItemGroup>
 
   <ItemGroup>
