re-commit entire project due to tortoise-git bug

--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum.csproj
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum.csproj
@@ -28,6 +28,10 @@
 
   <ItemGroup>
 
+    <Content Update="wwwroot\css\avatar.css">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+
     <Content Update="wwwroot\css\footer.css">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
