implemented email confirmation sending via SendGrid

--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum.csproj
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum.csproj
@@ -24,6 +24,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
     <PackageReference Include="Profanity.Detector" Version="0.1.8" />
+    <PackageReference Include="SendGrid" Version="9.24.4" />
     <PackageReference Include="SixLabors.ImageSharp" Version="1.0.4" />
   </ItemGroup>
 
