added libman added chart.js changed db connection ip

--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum.csproj
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum.csproj
@@ -6,7 +6,6 @@
     <RootNamespace>ASP.NET_MVC_Forum</RootNamespace>
     <CopyRefAssembliesToPublishDirectory>false</CopyRefAssembliesToPublishDirectory>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
@@ -23,9 +22,14 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
+    <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.1.113" />
     <PackageReference Include="Profanity.Detector" Version="0.1.8" />
     <PackageReference Include="SendGrid" Version="9.24.4" />
     <PackageReference Include="SixLabors.ImageSharp" Version="1.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="libman.json" />
   </ItemGroup>
 
   <ItemGroup>
