--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum.Data/ASP.NET-MVC-Forum.Data.csproj
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum.Data/ASP.NET-MVC-Forum.Data.csproj
@@ -15,6 +15,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="5.0.15" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="2.1.0" />
   </ItemGroup>
 
   <ItemGroup>
