--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum.Infrastructure/ASP.NET-MVC-Forum.Infrastructure.csproj
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum.Infrastructure/ASP.NET-MVC-Forum.Infrastructure.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="11.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    <PackageReference Include="HtmlSanitizer" Version="7.1.488" />
   </ItemGroup>
 
   <ItemGroup>
