--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum.Business.Contracts/ASP.NET-MVC-Forum.Business.Contracts.csproj
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum.Business.Contracts/ASP.NET-MVC-Forum.Business.Contracts.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.15" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.1.0" />
   </ItemGroup>
 
   <ItemGroup>
