--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum.Data/ASP.NET-MVC-Forum.Data.csproj
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum.Data/ASP.NET-MVC-Forum.Data.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\ASP.NET-MVC-Forum.Domain\ASP.NET-MVC-Forum.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
