moved validation into separate projects

--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum.Business/ASP.NET-MVC-Forum.Business.csproj
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum.Business/ASP.NET-MVC-Forum.Business.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <ProjectReference Include="..\ASP.NET-MVC-Forum.Business.Contracts\ASP.NET-MVC-Forum.Business.Contracts.csproj" />
     <ProjectReference Include="..\ASP.NET-MVC-Forum.Data\ASP.NET-MVC-Forum.Data.csproj" />
+    <ProjectReference Include="..\ASP.NET-MVC-Forum.Validation.Contracts\ASP.NET-MVC-Forum.Validation.Contracts.csproj" />
   </ItemGroup>
 
 </Project>
