--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum.Infrastructure/ASP.NET-MVC-Forum.Infrastructure.csproj
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum.Infrastructure/ASP.NET-MVC-Forum.Infrastructure.csproj
@@ -9,6 +9,8 @@
     <PackageReference Include="AutoMapper" Version="11.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="HtmlSanitizer" Version="7.1.488" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="5.0.15" />
+    <PackageReference Include="SendGrid" Version="9.27.0" />
   </ItemGroup>
 
   <ItemGroup>
