--- a/.gitignore
+++ b/.gitignore
@@ -223,6 +223,8 @@ obj
 
 *appsettings*
 
+*.jpg
+
 #####
 # End of core ignore list, below put you custom 'per project' settings (patterns or path)
 #####
